out/production/Compiler/lulu2.g4
grammar lulu2;
program : ft_dcl? ft_def*;
//program : ft_dcl? (ft_def* ft_start fact1 | ft_start ft_def* );//left factoring

//fact1:ft_def*|;//| nullable;

//ft_start:'('INT ID ')''='('function'|'Function')('srart'|'START')('('')')block;
OCONTROLLS:'.'|','|';'|':';
OBLOCK:'['|']'|'{'|'}'| '(' |')';

INT:'int';
BOOL:'bool';
FLOAT:'float';
LONG:'long';
DOUBLE:'double';
STRING:'string';
CHAR:'char';

ALLOCATE :'allocate';
DEFAULT :'default';
THIS:'this';
DESTRUCT :'destruct';
IF :'if';
TRUE: 'true';
BREAK :'break';
READ :'read';
CASE :'case';
ELSE:'else';
RETURN :'return';
WHILE :'while';
FALSE :'false';
NEW :'new';
SIZEOF :'sizeof';
WRITE :'write';
CONST :'const';
FUNCTION :'function';
FOR:'for';
SWITCH:'switch';
CONTINUE:'continue';
OF:'of';
NIL :'nil';
SUPER:'super';


fragment DIGIT:[0-9];

Int_const : DIGIT+ | '0'('x'|'X')([0-9]|'a'|'A'|'b'|'B'|'c'|'C'|'d'|'D'|'e'|'E'|'f'|'F')+;
ID:(LETTER|'_')(LETTER|'_'|[0-9])*;

LETTER: [a-zA-Z];

OptionalExponent:(('e'|'E')('+'|'-')?)[0-9]+;

REAL_CONST:(REAL_FACT|REAL_FACT[0-9]+|'.'[0-9]+) (OptionalExponent)?;
REAL_FACT: [0-9]+'.';

CHAR_CONST:'\''([a-z]|[A-Z]|'\\0'|'\\t'|'\\n'|'\\r'|ASCII|[0-9]|ARITHMETIC|
    RELATIONAL|OCONTROLLS|OBLOCK)'\'';
//--------------------------
ASCII:'\\'('x'|'X')( ( ([0-9])+ | ([a-f])+ )+ |(([0-9])+ | ([A-F])+ )+ );
Bool_const:TRUE|FALSE;
String_const: '"' (~['"\\\r\n'])*'"';
ft_dcl : 'declare' '{' ( func_dcl | type_dcl | var_def )+ '}';
func_dcl : ( '(' args ')' '=' )? ID '(' ( args | args_var )? ')' ';';
args : type ( '[' ']' )* | args ',' type ( '[' ']' )*;
args_var : type ID ( '[' ']' )* | args_var ',' type ID ( '[' ']' )*;
block : '{' ( stmt | var_def )* '}';
stmt : assign ';' | func_call ';' | cond_stmt | loop_stmt | RETURN ';' | GOTO ';' | label | expr ';' | BREAK ';' | CONTINUE ';' |
DESTRUCT ( '[' ']' )* ID ';';
type : INT | BOOL | FLOAT | LONG | CHAR | DOUBLE | STRING | ID;
type_dcl : ID ';';
var_def : CONST? type var_val ( ',' var_val )* ';';
var_val : ID ( '[' Int_const ']' )* ( '=' ( expr | list | ALLOCATE ID ) )?;
list : '[' ( expr | list ) ( ',' ( expr | list ) )* ']';
ft_def : ( type_def | fun_def )+;
type_def : type ID ( ':' ID )? '{' component+ '}';
component : access_modifier? ( var_def | fun_def );
access_modifier : 'private' | 'public' | 'protected';
fun_def : ( '(' args_var ')' '=' )? FUNCTION ID '(' args_var? ')' block;


assign : var '=' np2 | '(' var ( ',' var )* ')' '=' func_call;//LEFT FACTORING
np2:expr|NEW;

var : ( ( THIS | SUPER ) '.' )? ref ( '.' ref )*;
ref : ID ( '[' expr ']' )*;
expr : ( '(' expr ')'| bit_unary_op Int_const | const_val |
func_call | var | NIL |Int_const bit_binary_op Int_const ) fact;

fact : binary_op (expr) fact|;


func_call : READ '(' var ')' |( var '.' )? ID '(' params? ')' | SIZEOF '(' ( type | var ) ')' | WRITE '(' var ')';

params : ex<program> ::= <ft_dcl>? <ft_def>*
<ft_dcl> ::= declare ‘{’ ( <func_dcl> | <type_dcl> | <var_def> )+ ‘}’
<func_dcl> ::= ( ‘(’ <args> ‘)’ ‘=’ )? id ‘(’ ( <args> | <args_var> )? ‘)’ ‘;’
<args> ::= <type> ( ‘[’ ‘]’ )* | <args> ‘,’ <type> ( ‘[’ ‘]’ )*
<args_var> ::= <type> id ( ‘[’ ‘]’ )* | <args_var> ‘,’ <type> id ( ‘[’ ‘]’ )*
<type> ::= int | bool | float | long | char | double | string | id
<type_dcl> ::= id ‘;’
<var_def> ::= const? <type> <var_val> ( ‘,’ <var_val> )* ‘;’
<var_val> ::= id ( ‘[’ int_const ‘]’ )* ( ‘=’ ( <expr> | <list> | allocate id ) )?
<list> ::= ‘[’ ( <expr> | <list> ) ( ‘,’ ( <expr> | <list> ) )* ‘]’
<ft_def> ::= ( <type_def> | <fun_def> )+
<type_def> ::= type id ( ‘:’ id )? ‘{’ <component>+ ‘}’
<component> ::= <access modifier>? ( <var_def> | <fun_def> )
<access_modifier> ::= private | public | protected
<fun_def> ::= ( ‘(’ <args_var> ‘)’ ‘=’ )? function id ‘(’ <args_var>? ‘)’ <block>
<block> ::= ‘{’ ( <var_def> | <stmt> )* ’}’
<stmt> ::= <assign> ‘;’ | <func_call> ‘;’ | <cond_stmt> | <loop_stmt> | return ‘;’ |
<goto> ‘;’ | <label> | <expr> ‘;’ | break ‘;’ | continue ‘;’ |
destruct ( ‘[’ ‘]’ )* id ‘;’
<assign> ::= <var> ‘=’ <expr> | <var> ‘=’ new | ‘(’ <var> ( ‘,’ <var> )* ‘)’ ‘=’ <func_call>
<var> ::= ( ( this | super ) ‘.’ )? <ref> ( ‘.’ <ref> )*
<ref> ::= id ( ‘[‘ <expr> ‘]’ )*
<expr> ::= <expr> <binary_op> <expr> | ‘(’ <expr> ‘)’ | <unary_op> <expr>| <const_val> |
<func_call> | <var> | nil
<func_call> ::= ( <var> ‘.’ )? id ‘(’ <params>? ‘)’ | sizeof ‘(‘ ( <type> | <var> ) ‘)’ |
read ‘(‘ <var> ‘)’ | write ‘(’ <var> ‘)’
<params> ::= <expr> | <expr> ‘,’ <params>
<cond_stmt> ::= if ‘(’ <expr> ‘)’ <block> ( else <block> )? |
switch ‘(’ <var> ‘)’ of ‘:’ ‘{’ ( case int_const ‘:’ <block> )* default ‘:’ <block> ’}’
<loop_stmt> ::= for ‘(’ <var_def>? ‘;’ <expr> ‘;’ <assign>? ‘)’ <block> |
while ‘(’ <expr> ‘)’ <block>
<goto> ::= goto id
<label> ::= id ‘:’
<const_val> ::= int_const | real_const | char_const | bool_const | string_const
<unary_op> ::= ‘-’ | ‘!’ | ‘~’
<binary_op> ::= <arithmetic> | <relational>
<arithmetic> ::= ‘+’ | ‘-’ | ‘*’ | ‘/’ | ‘%’ | ‘&’ | ‘|’ | ‘^’ | “||” | “&&”
<relational> ::= “==” | “!=” | “<=” | “>=” | ‘<’ | ‘>’
pr np;//left fact
np:',' params|;

cond_stmt : IF '(' expr ')' block ( ELSE block )? | SWITCH '(' var ') of'  ':' '{' ( CASE Int_const ':' block )* DEFAULT ':' block '}';
loop_stmt : FOR '(' var_def? ';' expr ';' assign? ')' block | WHILE '(' expr ')' block;
GOTO : 'goto' ID;
label : ID ':';
const_val : Int_const | REAL_CONST | CHAR_CONST | Bool_const | String_const;
bit_unary_op : '-' | '!' | '~';
bit_binary_op:'&' | '|' | '^' | '||' | '&&';

binary_op : ARITHMETIC | RELATIONAL;
ARITHMETIC : '+' | '-' | '*' | '/' | '%' ;
RELATIONAL : '==' | '!=' | '<=' | '=>' | '<' | '>';

WS : [ \t\r\n]+ -> skip;
